feat: Improve User builder
- 使用 @builder 构建 User
- 移除不必要注解